# GoddessCryptoOracle

./: .env.example  .gitignore  .replit  README.md  config.py  discord_handler.py  logger.py  main.py  near_handler.py  oauth_instructions.txt  package-lock.json  package.json  prophecy_contract.js  prophecy_generator.py  pyproject.toml  replit.nix  test_near.py  twitter_handler.py  web3_prophet.log.1  web3_prophet.log.2  web3_prophet.log.3  web3_prophet.log.4  web3_prophet.log.5  web_app.py
attached_assets/: Pasted--Build-a-Minimal-NEAR-Smart-Contract-in-Rust-Create-a-simple-Rust-contract-that-for-example-stores-1740952923108.txt  Pasted--Enhancement-Interactive-and-Customizable-Responses-for-Goddess-Crypto-Oracle-Objective--1740963419150.txt  Pasted-We-are-switching-from-a-Twitter-bot-to-a-Discord-bot-Please-generate-a-Python-script-that-Uses--1740907698110.txt
near_contract/: asconfig.json  package-lock.json  package.json  prophecy_contract.ts
near_contract/assembly/: index.ts
prophecy-contract/: Cargo.toml  README.md
prophecy-contract/src/: lib.rs
static/: style.css
static/js/: blockchain-viz.js
templates/: index.html
